added some shitty tablet & mobile versions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 		<div class="header__wrapper">
 
 			<nav class="main-nav">
-				<a href="#" class="main-nav__logo"><img src="img/logo.png" alt="Dark Slot"></a>
+				<a href="#" class="main-nav__logo"></a>
+
+				<div class="main-nav__menu-button">
+					<div class="main-nav__menu-line"></div>
+					<div class="main-nav__menu-line"></div>
+					<div class="main-nav__menu-line"></div>
+				</div>
+
 				<ul class="main-nav__list">
 					<li class="main-nav__item"><a href="#">Игры</a></li>
 					<li class="main-nav__item"><a href="#">Акции</a></li>
@@ -36,7 +43,7 @@
 	<section class="slider">
 		<div class="slide">
 			<div class="slide__image-wrapper">
-				<img src="img/slide-image.png" alt="slide" class="slide__image">
+				<!-- <img src="img/slide-image.png" alt="slide" class="slide__image"> -->
 			</div>
 			<div class="slide__wrapper">
 				<div class="slide__text">
@@ -49,7 +56,7 @@
 
 		<div class="slide">
 			<div class="slide__image-wrapper">
-				<img src="img/slide-image.png" alt="slide" class="slide__image">
+				<!-- <img src="img/slide-image.png" alt="slide" class="slide__image"> -->
 			</div>
 			<div class="slide__wrapper">
 				<div class="slide__text">
@@ -61,114 +68,117 @@
 		</div>
 	</section>
 
-	<section class="tabs">
-		<div class="tabs__wrapper">
-			
-			<div class="switchers">
-				<div class="switchers__switcher switchers__switcher--first switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Слоты</div>
-				<div class="switchers__switcher switchers__switcher--second"><div class="switchers__image switchers__image--second"></div>Лобби</div>
-				<div class="switchers__switcher switchers__switcher--third"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
-				<div class="switchers__switcher switchers__switcher--fourth"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
-				<div class="switchers__switcher switchers__switcher--fifth"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
-			</div>
+	<section class="viking-background">
+		<section class="tabs">
+			<div class="tabs__wrapper">
 
-			<div class="tabs__selector">Провайдер</div>
+				<div class="switchers">
+					<div class="switchers__switcher switchers__switcher--first switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Слоты</div>
+					<div class="switchers__switcher switchers__switcher--second"><div class="switchers__image switchers__image--second"></div>Лобби</div>
+					<div class="switchers__switcher switchers__switcher--third"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
+					<div class="switchers__switcher switchers__switcher--fourth"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
+					<div class="switchers__switcher switchers__switcher--fifth"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
+				</div>
 
-			<div class="tab tab--first tab--active">
-				<h2 class="tab__header">Самые популярные игры</h2>
-				<button class="tab__button">Случайная игра</button>
+				<div class="tabs__selector">Провайдер</div>
 
-				<div class="tab__variants-wrapper">
-					<div class="tab__variant">1</div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
+				<div class="tab tab--first tab--active">
+					<h2 class="tab__header">Самые популярные игры</h2>
+					<button class="tab__button">Случайная игра</button>
+
+					<div class="tab__variants-wrapper">
+						<div class="tab__variant">1</div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+					</div>
+				</div>
+
+				<div class="tab tab--second">
+					<h2 class="tab__header">Самые популярные игры</h2>
+					<button class="tab__button">Случайная игра</button>
+
+					<div class="tab__variants-wrapper">
+						<div class="tab__variant">2</div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+					</div>
+				</div>
+
+				<div class="tab tab--third">
+					<h2 class="tab__header">Самые популярные игры</h2>
+					<button class="tab__button">Случайная игра</button>
+
+					<div class="tab__variants-wrapper">
+						<div class="tab__variant">3</div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+					</div>
+				</div>
+
+				<div class="tab tab--fourth">
+					<h2 class="tab__header">Самые популярные игры</h2>
+					<button class="tab__button">Случайная игра</button>
+
+					<div class="tab__variants-wrapper">
+						<div class="tab__variant">4</div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+					</div>
+				</div>
+
+				<div class="tab tab--fifth">
+					<h2 class="tab__header">Самые популярные игры</h2>
+					<button class="tab__button">Случайная игра</button>
+
+					<div class="tab__variants-wrapper">
+						<div class="tab__variant">5</div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
+					</div>
+				</div>
+			</div>		
+		</section>
+
+		<section class="jackpot">
+			<div class="jackpot__wrapper">
+				<h1 class="jackpot__header">$ 10 000 000,45</h1>
+				<h2 class="jackpot__underheader">Общий джекпот</h2>
+				<button class="jackpot__button">Показать игры с джекпотом</button>
+				<span class="jackpot__background-text">#ничоси</span>
+				<div class="jackpot__image-wrapper">
+					<img src="img/viking.png" alt="viking" class="jackpot__image">
 				</div>
 			</div>
-
-			<div class="tab tab--second">
-				<h2 class="tab__header">Самые популярные игры</h2>
-				<button class="tab__button">Случайная игра</button>
-
-				<div class="tab__variants-wrapper">
-					<div class="tab__variant">2</div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-				</div>
-			</div>
-
-			<div class="tab tab--third">
-				<h2 class="tab__header">Самые популярные игры</h2>
-				<button class="tab__button">Случайная игра</button>
-
-				<div class="tab__variants-wrapper">
-					<div class="tab__variant">3</div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-				</div>
-			</div>
-
-			<div class="tab tab--fourth">
-				<h2 class="tab__header">Самые популярные игры</h2>
-				<button class="tab__button">Случайная игра</button>
-
-				<div class="tab__variants-wrapper">
-					<div class="tab__variant">4</div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-				</div>
-			</div>
-
-			<div class="tab tab--fifth">
-				<h2 class="tab__header">Самые популярные игры</h2>
-				<button class="tab__button">Случайная игра</button>
-
-				<div class="tab__variants-wrapper">
-					<div class="tab__variant">5</div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-					<div class="tab__variant"></div>
-				</div>
-			</div>
-		</div>		
+		</section>
 	</section>
 
-	<section class="jackpot">
-		<div class="jackpot__wrapper">
-			<h1 class="jackpot__header">$ 10 000 000,45</h1>
-			<h2 class="jackpot__underheader">Общий джекпот</h2>
-			<button class="jackpot__button">Показать игры с джекпотом</button>
-			<span class="jackpot__background-text">#ничоси</span>
-			<div class="jackpot__image-wrapper">
-				<img src="img/viking.png" alt="viking" class="jackpot__image">
-			</div>
-		</div>
-	</section>
-
-	<srection class="last-winners">
+	<section class="last-winners">
 		<div class="last-winners__wrapper">
 			<h2 class="last-winners__header">Последние победители</h2>
 
@@ -205,7 +215,7 @@
 
 			<button class="last-winners__button">Призыв к действию</button>
 		</div>
-	</srection>
+	</section>
 
 	<section class="popular-games">
 		<div class="popular-games__wrapper">
@@ -213,6 +223,7 @@
 			<button class="popular-games__button">Случайная игра</button>
 
 			<div class="games-preview">
+				<div class="games-preview__item"></div>
 				<div class="games-preview__item"></div>
 				<div class="games-preview__item"></div>
 				<div class="games-preview__item"></div>
@@ -340,11 +351,25 @@
 			autoplay: true,
 			autoplaySpeed: 3000,
 			slidesToShow: 1,
-			arrows: true
+			arrows: true,
+			responsive: [
+			{
+				breakpoint: 768,
+				settings: {
+					infinite: true,
+					autoplay: true,
+					autoplaySpeed: 3000,
+					slidesToShow: 1,
+					arrows: false
+				}
+			}
+			]
 		});
 	</script>
 
 	<script type="text/javascript" src="js/tabs.js"></script>
+
+	<script type="text/javascript" src="js/mobile-menu.js"></script>
 
 </body>
 </html>
