--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
 					</div>
 				</div>
 
@@ -121,6 +122,7 @@
 
 					<div class="tab__variants-wrapper">
 						<div class="tab__variant">3</div>
+						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
@@ -144,6 +146,7 @@
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
+						<div class="tab__variant"></div>
 					</div>
 				</div>
 
@@ -153,6 +156,7 @@
 
 					<div class="tab__variants-wrapper">
 						<div class="tab__variant">5</div>
+						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
 						<div class="tab__variant"></div>
@@ -341,6 +345,34 @@
 		</div>
 	</footer>
 
+	<div class="fixed-bar">
+		<div class="fixed-bar__wrapper">
+			<div class="fixed-bar__hider"></div>
+			<div class="fixed-bar__shower hidden">
+				<p>Показать бар</p>
+			</div>
+			<div class="fixed-bar__top-games-button"><p>Топ-игры</p></div>
+			<form action="#" class="search">
+				<input type="search" class="search__field" placeholder="Поиск">
+			</form>
+			<div class="fixed-bar__chat"><p>Онлайн-чат</p></div>
+			<div class="fixed-bar__language"><p>Русский</p></div>
+
+			<div class="top-games hidden">
+				<div class="top-games__wrapper">
+					<div class="top-games__slide">1</div>
+					<div class="top-games__slide">2</div>
+					<div class="top-games__slide">3</div>
+					<div class="top-games__slide">4</div>
+					<div class="top-games__slide">5</div>
+					<div class="top-games__slide">6</div>
+					<div class="top-games__slide">7</div>
+					<div class="top-games__slide">8</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 
 	<script type="text/javascript" src="js/slick.min.js"></script>
@@ -365,11 +397,21 @@
 			}
 			]
 		});
+
+		$('.top-games__wrapper').slick({
+			infinite: true,
+			autoplay: true,
+			autoplaySpeed: 3000,
+			slidesToShow: 7,
+			arrows: true
+		});
 	</script>
 
 	<script type="text/javascript" src="js/tabs.js"></script>
 
 	<script type="text/javascript" src="js/mobile-menu.js"></script>
+
+	<script type="text/javascript" src="js/fixes-bar.js"></script>
 
 </body>
 </html>
